--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha3 
	- Fixed a problem with batch downloads and tmpplaylists
	- Fixed missing set_timeout_limit(0); on add to catalog
		functions

--------------------------------------------------------------------------
  v.3.4-Alpha2 09/03/2007
	- Fixed a problem where it'd let you go through the install after
		ampache had already been installed due to a change in the
		config variable names
	- Added ability to delete songs from a saved playlist
	- Added ability to create a new playlist based on active playlist
	- Fixed the Playlist Method 'Send on Add' so that it works, the
		'Send and Clear' is still broken
	- Fixed Advanced random
  	- Fixed missing artist name on Albums of the Moment
	- Added simple Playlist element view, non-editable
  	- Fixed double posting of songs on a single stream with some
		clients
  	- Updated LastFM protocol to v1.2 
	- Fixed copyright notices (Thx porthose)
  	- Fixed single downloads
  	- Fixed weird CSS issue with a crafty little hack
  	- Fixed a session fixation issue
  	- Fixed Album Disk support for OGG's and added display to browse
		albums
  	- Added Album Disk support for id3v2 (Thx Hugo Haas)
  	- Updated LastFM pluging, must uninstall/reinstall to make it work
		will add in auto-update later
  	- Adjusted LastFM reporting to reduce lag betwen songs. You must
		now currently be logged in for LastFM to report correctly
  	- Fixed a potential PHP error when browsing the last page or a 
		search with 0 results
  	- Fixed rating search method
  	- Added 'Buy This Track' link on Find Missing Tracks if a purchase
		url is given in the returned data
  	- Reduced # of pages at any one point on browse pages and tweaked